# homecloud

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  update_templates.py
src/homecloud/: __init__.py  client.py  client_subclass.py  get_routes.py  homecloud_config.toml  homecloud_generator.py  homecloud_logging.py  homecloud_utils.py  module_to_api.py  post_routes.py  request_models.py  router_template.py  router_template.txt  server.py  server_config.py
src/homecloud/templates/: server.txt  server_config.txt
tests/: test_homecloud_generator.py
