[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homecloud"
description = "A command line tool for generating the template files needed to integrate fastapi, uvicorn, and a requests based client into a Python project."
version = "0.0.0"
requires-python = "3.0"
dependencies = ["fastapi~=0.86.0", "uvicorn[standard]", "ifaddr~=0.2.0", "pydantic~=1.10.2", "pytest~=7.2.1", "tomlkit~=0.11.6"]
readme = "README.md"
keywords = ["fastapi", "api", "client", "network", "server"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]

[[project.authors]]
name = "Matt Manes"
email = "mattmanes@pm.me"

[project.urls]
"Homepage" = "https://github.com/matt-manes/homecloud"
"Documentation" = "https://github.com/matt-manes/homecloud/tree/main/docs"
"Source code" = "https://github.com/matt-manes/homecloud/tree/main/src/homecloud"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
pythonpath = "src"

[tool.hatch.build.targets.sdist]
exclude = [
    ".coverage",
    ".pytest_cache",
    ".vscode",
    "tests",
    ".gitignore"
    ]
[project.scripts]
homecloud = "homecloud.homecloud:main"
